# git-extract

./: Cargo.toml  LICENSE  README.md  mkdocs.yml  project.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  git-extract.1  index.md  usage.md
src/: cli.rs  git_ops.rs  lib.rs  main.rs  routing.rs  state.rs  worktree_apply.rs
tests/: conflict_flow.rs  e2e_binary.rs  integration_flow.rs  targets_merge.rs
