[package]
name = "git-splitbranch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "git-extract"
path = "src/main.rs"

[lib]
name = "git_extract"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
tempfile = "3"
thiserror = "1"
which = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
